--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -2,8 +2,8 @@ name: CI Pipeline
 on: [push]
 
 jobs:
-  build:
-    name: Run unit and integration tests
+  build-03-end-catalog:
+    name: Build Chapter03/03-end/catalog-service
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout repository
@@ -12,42 +12,112 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Build Chapter03/03-end/catalog-service
+      - name: Assemble and test
         run: |
           cd Chapter03/03-end/catalog-service
           chmod +x gradlew
           ./gradlew build
-      - name: Build Chapter04/04-begin/catalog-service
+  build-03-begin-catalog:
+    name: Build Chapter04/04-begin/catalog-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
         run: |
           cd Chapter04/04-begin/catalog-service
           chmod +x gradlew
           ./gradlew build
-      - name: Build Chapter04/04-end/catalog-service
+  build-04-end-catalog:
+    name: Build Chapter04/04-end/catalog-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
         run: |
           cd Chapter04/04-end/catalog-service
           chmod +x gradlew
           ./gradlew build
-      - name: Build Chapter04/04-end/config-service
+  build-04-end-config:
+    name: Build Chapter04/04-end/config-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
         run: |
           cd Chapter04/04-end/config-service
           chmod +x gradlew
           ./gradlew build
-      - name: Build Chapter05/05-begin/catalog-service
+  build-05-begin-catalog:
+    name: Build Chapter05/05-begin/catalog-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
         run: |
           cd Chapter05/05-begin/catalog-service
           chmod +x gradlew
           ./gradlew build
-      - name: Build Chapter05/05-begin/config-service
+  build-05-begin-config:
+    name: Build Chapter05/05-begin/config-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
         run: |
           cd Chapter05/05-begin/config-service
           chmod +x gradlew
           ./gradlew build
-      - name: Build Chapter05/05-end/catalog-service
+  build-05-end-catalog:
+    name: Build Chapter05/05-end/catalog-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
         run: |
           cd Chapter05/05-end/catalog-service
           chmod +x gradlew
           ./gradlew build
-      - name: Build Chapter05/05-end/config-service
+  build-05-end-config:
+    name: Build Chapter05/05-end/config-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
         run: |
           cd Chapter05/05-end/config-service
           chmod +x gradlew
