--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -102,6 +102,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       - name: Assemble and test
         run: |
           cd Chapter05/05-end/catalog-service
