--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -122,3 +122,123 @@ jobs:
           cd Chapter05/05-end/config-service
           chmod +x gradlew
           ./gradlew build
+  build-06-start-catalog:
+    name: Build Chapter06/06-start/catalog-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter06/06-start/catalog-service
+          chmod +x gradlew
+          ./gradlew build
+  build-06-start-config:
+    name: Build Chapter06/06-start/config-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter06/06-start/config-service
+          chmod +x gradlew
+          ./gradlew build
+  build-06-end-catalog:
+    name: Build Chapter06/06-end/catalog-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter06/06-end/catalog-service
+          chmod +x gradlew
+          ./gradlew build
+  build-06-end-config:
+    name: Build Chapter06/06-end/config-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter06/06-end/config-service
+          chmod +x gradlew
+          ./gradlew build
+  build-07-start-catalog:
+    name: Build Chapter07/07-start/catalog-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter07/07-start/catalog-service
+          chmod +x gradlew
+          ./gradlew build
+  build-07-start-config:
+    name: Build Chapter07/07-start/config-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter07/07-start/config-service
+          chmod +x gradlew
+          ./gradlew build
+  build-07-end-catalog:
+    name: Build Chapter07/07-end/catalog-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter07/07-end/catalog-service
+          chmod +x gradlew
+          ./gradlew build
+  build-07-end-config:
+    name: Build Chapter07/07-end/config-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter07/07-end/config-service
+          chmod +x gradlew
+          ./gradlew build
