--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -2,6 +2,21 @@ name: CI Pipeline
 on: [push]
 
 jobs:
+  build-02-end-greeting:
+    name: Build Chapter02/02-end/greeting-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter02/02-end/greeting-service
+          chmod +x gradlew
+          ./gradlew build
   build-03-end-catalog:
     name: Build Chapter03/03-end/catalog-service
     runs-on: ubuntu-20.04
