--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -333,7 +333,7 @@ jobs:
           chmod +x gradlew
           ./gradlew build
   build-09-begin-catalog:
-    name: Build Chapter08/09-begin/catalog-service
+    name: Build Chapter09/09-begin/catalog-service
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout repository
@@ -344,7 +344,7 @@ jobs:
           java-version: 11
       - name: Assemble and test
         run: |
-          cd Chapter08/09-begin/catalog-service
+          cd Chapter09/09-begin/catalog-service
           chmod +x gradlew
           ./gradlew build
   build-09-begin-config:
@@ -363,7 +363,7 @@ jobs:
           chmod +x gradlew
           ./gradlew build
   build-09-begin-order:
-    name: Build Chapter08/09-begin/order-service
+    name: Build Chapter09/09-begin/order-service
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout repository
@@ -375,6 +375,36 @@ jobs:
       - name: Assemble and test
         run: |
           cd Chapter09/09-begin/order-service
+          chmod +x gradlew
+          ./gradlew build
+  build-09-end-catalog:
+    name: Build Chapter09/09-end/catalog-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter09/09-end/catalog-service
+          chmod +x gradlew
+          ./gradlew build
+  build-09-end-config:
+    name: Build Chapter09/09-end/config-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter09/09-end/config-service
           chmod +x gradlew
           ./gradlew build
   build-09-end-order:
