--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -3,8 +3,41 @@ on: [push]
 
 jobs:
   build-02-end-greeting:
-    name: Build Chapter02/02-end/greeting-service
+    name: Build ${{ matrix.project }}
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        project: [
+          Chapter02/02-end/greeting-service,
+          Chapter03/03-end/catalog-service,
+          Chapter04/04-begin/catalog-service,
+          Chapter04/04-end/catalog-service,
+          Chapter04/04-end/config-service,
+          Chapter05/05-begin/catalog-service,
+          Chapter05/05-begin/config-service,
+          Chapter05/05-end/catalog-service,
+          Chapter05/05-end/config-service,
+          Chapter06/06-begin/catalog-service,
+          Chapter06/06-begin/config-service,
+          Chapter06/06-end/catalog-service,
+          Chapter06/06-end/config-service,
+          Chapter07/07-begin/catalog-service,
+          Chapter07/07-begin/config-service,
+          Chapter07/07-end/catalog-service,
+          Chapter07/07-end/config-service,
+          Chapter08/08-begin/catalog-service,
+          Chapter08/08-begin/config-service,
+          Chapter08/08-end/catalog-service,
+          Chapter08/08-end/config-service,
+          Chapter08/08-end/order-service,
+          Chapter09/09-begin/catalog-service,
+          Chapter09/09-begin/config-service,
+          Chapter09/09-begin/order-service,
+          Chapter09/09-end/catalog-service,
+          Chapter09/09-end/config-service,
+          Chapter09/09-end/order-service,
+          Chapter09/09-end/edge-service
+        ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -14,426 +47,7 @@ jobs:
           java-version: 11
       - name: Assemble and test
         run: |
-          cd Chapter02/02-end/greeting-service
+          cd ${{ matrix.project }}
           chmod +x gradlew
           ./gradlew build
-  build-03-end-catalog:
-    name: Build Chapter03/03-end/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter03/03-end/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-03-begin-catalog:
-    name: Build Chapter04/04-begin/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter04/04-begin/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-04-end-catalog:
-    name: Build Chapter04/04-end/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter04/04-end/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-04-end-config:
-    name: Build Chapter04/04-end/config-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter04/04-end/config-service
-          chmod +x gradlew
-          ./gradlew build
-  build-05-begin-catalog:
-    name: Build Chapter05/05-begin/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter05/05-begin/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-05-begin-config:
-    name: Build Chapter05/05-begin/config-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter05/05-begin/config-service
-          chmod +x gradlew
-          ./gradlew build
-  build-05-end-catalog:
-    name: Build Chapter05/05-end/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter05/05-end/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-05-end-config:
-    name: Build Chapter05/05-end/config-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter05/05-end/config-service
-          chmod +x gradlew
-          ./gradlew build
-  build-06-begin-catalog:
-    name: Build Chapter06/06-begin/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter06/06-begin/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-06-begin-config:
-    name: Build Chapter06/06-begin/config-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter06/06-begin/config-service
-          chmod +x gradlew
-          ./gradlew build
-  build-06-end-catalog:
-    name: Build Chapter06/06-end/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter06/06-end/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-06-end-config:
-    name: Build Chapter06/06-end/config-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter06/06-end/config-service
-          chmod +x gradlew
-          ./gradlew build
-  build-07-begin-catalog:
-    name: Build Chapter07/07-begin/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter07/07-begin/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-07-begin-config:
-    name: Build Chapter07/07-begin/config-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter07/07-begin/config-service
-          chmod +x gradlew
-          ./gradlew build
-  build-07-end-catalog:
-    name: Build Chapter07/07-end/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter07/07-end/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-07-end-config:
-    name: Build Chapter07/07-end/config-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter07/07-end/config-service
-          chmod +x gradlew
-          ./gradlew build
-  build-08-begin-catalog:
-    name: Build Chapter08/08-begin/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter08/08-begin/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-08-begin-config:
-    name: Build Chapter08/08-begin/config-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter08/08-begin/config-service
-          chmod +x gradlew
-          ./gradlew build
-  build-08-end-catalog:
-    name: Build Chapter08/08-end/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter08/08-end/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-08-end-config:
-    name: Build Chapter08/08-end/config-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter08/08-end/config-service
-          chmod +x gradlew
-          ./gradlew build
-  build-08-end-order:
-    name: Build Chapter08/08-end/order-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter08/08-end/order-service
-          chmod +x gradlew
-          ./gradlew build
-  build-09-begin-catalog:
-    name: Build Chapter09/09-begin/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter09/09-begin/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-09-begin-config:
-    name: Build Chapter09/09-begin/config-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter09/09-begin/config-service
-          chmod +x gradlew
-          ./gradlew build
-  build-09-begin-order:
-    name: Build Chapter09/09-begin/order-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter09/09-begin/order-service
-          chmod +x gradlew
-          ./gradlew build
-  build-09-end-catalog:
-    name: Build Chapter09/09-end/catalog-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter09/09-end/catalog-service
-          chmod +x gradlew
-          ./gradlew build
-  build-09-end-config:
-    name: Build Chapter09/09-end/config-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter09/09-end/config-service
-          chmod +x gradlew
-          ./gradlew build
-  build-09-end-order:
-    name: Build Chapter09/09-end/order-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter09/09-end/order-service
-          chmod +x gradlew
-          ./gradlew build
-  build-09-end-edge:
-    name: Build Chapter09/09-end/edge-service
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble and test
-        run: |
-          cd Chapter09/09-end/edge-service
-          chmod +x gradlew
-          ./gradlew build
+
