--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -187,7 +187,26 @@ jobs:
         project: [
           Chapter09/09-end/catalog-service,
           Chapter09/09-end/config-service,
-          Chapter09/09-end/order-service,
+          Chapter09/09-end/order-service
+        ]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd ${{ matrix.project }}
+          chmod +x gradlew
+          ./gradlew build
+  build-chapter-09-end-edge:
+    name: Build ${{ matrix.project }}
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        project: [
           Chapter09/09-end/edge-service
         ]
     steps:
