--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -73,7 +73,7 @@ jobs:
         run: |
           cd Chapter08/08-end/order-service
           chmod +x gradlew
-          ./gradlew build --debug --full-stacktrace
+          ./gradlew build
   build-chapter-09-begin-order-service:
     name: Build Chapter09/09-begin/order-service
     runs-on: ubuntu-20.04
@@ -88,7 +88,7 @@ jobs:
         run: |
           cd Chapter09/09-begin/order-service
           chmod +x gradlew
-          ./gradlew test --debug --full-stacktrace
+          ./gradlew test
   build-chapter-09-end-order-service:
     name: Build Chapter09/09-end/order-service
     runs-on: ubuntu-20.04
@@ -103,4 +103,34 @@ jobs:
         run: |
           cd Chapter09/09-end/order-service
           chmod +x gradlew
-          ./gradlew test --debug --full-stacktrace
+          ./gradlew test
+  build-chapter-10-begin-order-service:
+    name: Build Chapter10/10-begin/order-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter10/10-begin/order-service
+          chmod +x gradlew
+          ./gradlew test
+  build-chapter-10-end-order-service:
+    name: Build Chapter10/10-end/order-service
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Assemble and test
+        run: |
+          cd Chapter10/10-end/order-service
+          chmod +x gradlew
+          ./gradlew test
