--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -59,4 +59,4 @@ jobs:
         run: |
           cd ${{ matrix.project }}
           chmod +x gradlew
-          ./gradlew build
+          ./gradlew clean build
