--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -105,3 +105,27 @@ jobs:
           cd ${{ matrix.project }}
           chmod +x gradlew
           ./gradlew clean build
+  build_16:
+    name: Build ${{ matrix.project }}
+    runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+      matrix:
+        project: [
+          Chapter16/16-end/quote-service,
+          Chapter16/16-end/quote-function
+        ]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: temurin
+          java-version: 16
+          cache: gradle
+      - name: Compile and test application
+        run: |
+          cd ${{ matrix.project }}
+          chmod +x gradlew
+          ./gradlew clean build
