--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -89,6 +89,8 @@ jobs:
           Chapter14/14-end/order-service,
           Chapter14/14-end/edge-service,
           Chapter14/14-end/dispatcher-service,
+          Chapter16/16-end/quote-service,
+          Chapter16/16-end/quote-function,
         ]
     steps:
       - name: Checkout repository
