--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -90,6 +90,16 @@ jobs:
           Chapter14/14-end/order-service,
           Chapter14/14-end/edge-service,
           Chapter14/14-end/dispatcher-service,
+          Chapter15/15-begin/catalog-service,
+          Chapter15/15-begin/config-service,
+          Chapter15/15-begin/order-service,
+          Chapter15/15-begin/edge-service,
+          Chapter15/15-begin/dispatcher-service,
+          Chapter15/15-end/catalog-service,
+          Chapter15/15-end/config-service,
+          Chapter15/15-end/order-service,
+          Chapter15/15-end/edge-service,
+          Chapter15/15-end/dispatcher-service,
           Chapter16/16-end/quote-service,
           Chapter16/16-end/quote-function,
         ]
