Update commit stage workflow

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -3,59 +3,37 @@ on: [push]
 
 jobs:
   build:
-    name: Build ${{ matrix.project }}
+    name: Build and Test ${{ matrix.project }}
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
         project: [
           Chapter02/02-end/catalog-service,
-          Chapter03/03-begin/catalog-service,
           Chapter03/03-end/catalog-service,
-          Chapter04/04-begin/catalog-service,
           Chapter04/04-end/catalog-service,
           Chapter04/04-end/config-service,
-          Chapter05/05-begin/catalog-service,
-          Chapter05/05-begin/config-service,
           Chapter05/05-intermediate/catalog-service,
           Chapter05/05-intermediate/config-service,
           Chapter05/05-end/catalog-service,
           Chapter05/05-end/catalog-service-jpa,
           Chapter05/05-end/config-service,
-          Chapter06/06-begin/catalog-service,
-          Chapter06/06-begin/config-service,
           Chapter06/06-end/catalog-service,
           Chapter06/06-end/config-service,
-          Chapter07/07-begin/catalog-service,
-          Chapter07/07-begin/config-service,
           Chapter07/07-end/catalog-service,
           Chapter07/07-end/config-service,
-          Chapter08/08-begin/catalog-service,
-          Chapter08/08-begin/config-service,
           Chapter08/08-end/catalog-service,
           Chapter08/08-end/config-service,
           Chapter08/08-end/order-service,
-          Chapter09/09-begin/catalog-service,
-          Chapter09/09-begin/config-service,
-          Chapter09/09-begin/order-service,
           Chapter09/09-end/catalog-service,
           Chapter09/09-end/config-service,
           Chapter09/09-end/edge-service,
           Chapter09/09-end/order-service,
-          Chapter10/10-begin/catalog-service,
-          Chapter10/10-begin/config-service,
-          Chapter10/10-begin/order-service,
-          Chapter10/10-begin/edge-service,
           Chapter10/10-end/catalog-service,
           Chapter10/10-end/config-service,
           Chapter10/10-end/order-service,
           Chapter10/10-end/edge-service,
           Chapter10/10-end/dispatcher-service,
-          Chapter11/11-begin/catalog-service,
-          Chapter11/11-begin/config-service,
-          Chapter11/11-begin/order-service,
-          Chapter11/11-begin/edge-service,
-          Chapter11/11-begin/dispatcher-service,
           Chapter11/11-end/catalog-service,
           Chapter11/11-end/config-service,
           Chapter11/11-end/order-service,
@@ -66,36 +44,16 @@ jobs:
           Chapter12/12-end/order-service,
           Chapter12/12-end/edge-service,
           Chapter12/12-end/dispatcher-service,
-          Chapter12/12-begin/catalog-service,
-          Chapter12/12-begin/config-service,
-          Chapter12/12-begin/order-service,
-          Chapter12/12-begin/edge-service,
-          Chapter12/12-begin/dispatcher-service,
-          Chapter13/13-begin/catalog-service,
-          Chapter13/13-begin/config-service,
-          Chapter13/13-begin/order-service,
-          Chapter13/13-begin/edge-service,
-          Chapter13/13-begin/dispatcher-service,
           Chapter13/13-end/catalog-service,
           Chapter13/13-end/config-service,
           Chapter13/13-end/order-service,
           Chapter13/13-end/edge-service,
           Chapter13/13-end/dispatcher-service,
-          Chapter14/14-begin/catalog-service,
-          Chapter14/14-begin/config-service,
-          Chapter14/14-begin/order-service,
-          Chapter14/14-begin/edge-service,
-          Chapter14/14-begin/dispatcher-service,
           Chapter14/14-end/catalog-service,
           Chapter14/14-end/config-service,
           Chapter14/14-end/order-service,
           Chapter14/14-end/edge-service,
           Chapter14/14-end/dispatcher-service,
-          Chapter15/15-begin/catalog-service,
-          Chapter15/15-begin/config-service,
-          Chapter15/15-begin/order-service,
-          Chapter15/15-begin/edge-service,
-          Chapter15/15-begin/dispatcher-service,
           Chapter15/15-end/catalog-service,
           Chapter15/15-end/config-service,
           Chapter15/15-end/order-service,
